--- a/src/components/styles/Main.css
+++ b/src/components/styles/Main.css
@@ -1,3 +1,7 @@
+body.dark {
+  background-color: #202d36;
+}
+
 .dark {
   background-color: #2b3743;
   color: white;
